<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F2F1"
    android:textAlignment="textEnd"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="#FAFAF8"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:ems="10"
            android:text="Job Comparison App"
            android:textAlignment="center"
            android:background="#8CB160"
            android:textColor="#FDFDFD"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mainaddCurrentJobButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="100"
                android:height="40dp"
                android:text="Current Job"
                android:textSize="16sp" />

            <Button
                android:id="@+id/mainAddJobOfferButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginRight="20dp"
                android:layout_weight="100"
                android:text="Job Offers"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/maincomparisonSettings"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="100"
                android:text="Settings" />

            <Button
                android:id="@+id/mainCompareJobsButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginRight="20dp"
                android:layout_weight="100"
                android:text="Compare Jobs" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>