...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ComparisonSettingsView">


    <TextView
        android:id="@+id/settingViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8CB160"
        android:ems="10"
        android:text="Adjust Comparison Settings"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="24sp"
        android:textStyle="bold" />


...
