...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <TextView
        android:id="@+id/addJobViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Add/Edit Current Job Details"
        android:textAlignment="center"
        android:background="#8CB160"
        android:textColor="#FDFDFD"
        android:textSize="24sp"
        android:height="38dp"
        android:textStyle="bold" />
...
