...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/compareViewTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#8CB160"
            android:ems="10"
            android:text="Compare Offers"
            android:textAlignment="center"
            android:textColor="#FDFDFD"
            android:textSize="24sp"
            android:textStyle="bold" />


...
