...

            <Button
                android:id="@+id/offerCompareWithCurrentButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
...

        <TableLayout
            android:id="@+id/job_offer_table"
            android:layout_width="match_parent"
            android:layout_height="480dp"
...

                <EditText
                    android:id="@+id/offerTitleValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/offerCompanyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/offerLocation1Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/offerLocation2Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/offerCostLivingValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/offerYearlySalaryValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/offerYearlyBonusValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/offerRetireBenefitValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/offerRelocationStipendValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/offerRSUAwardValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/offerSaveOfferButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
...

        <LinearLayout
            android:id="@+id/compareJobLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

        <TableLayout
            android:id="@+id/job_compare_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

                <TextView
                    android:id="@+id/offerCompareTitleCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareTitleOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareCompanyNameCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareCompanyNameOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareLocation1Current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareLocation1Offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareLocation2Current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareLocation2Offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareSalaryAdjustedCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareSalaryAdjustedOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareBonusAdjustedCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareBonusAdjustedOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareRetireBenefitCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareRetireBenefitOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareRelocationStipendCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareRelocationStipendOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareRSUAwardCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/offerCompareRSUAwardOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
